[package]
name = "builder"
version = "2.2.0"
edition = "2024"

[dependencies]
inquire = "0.7.5"
strum = "0.27.2"
strum_macros = "0.27.2"
derive-new = "0.7.0"
sender = { path = "../sender" }
quote = "1.0.40"
proc-macro2 = "1.0.95"
tempfile = "3.20.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
enum_delegate = "0.2.0"
colored = "3.0.0"
thiserror = "2.0.14"
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5.45", features = ["derive"] }
