[package]
name = "builder"
version = "2.2.0"
edition = "2024"

[dependencies]
inquire = "0.9.1"
strum = "0.27.2"
strum_macros = "0.27.2"
derive-new = "0.7.0"
sender = { path = "../sender" }
quote = "1.0.40"
proc-macro2 = "1.0.101"
tempfile = "3.23.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
enum_delegate = "0.2.0"
colored = "3.0.0"
thiserror = "2.0.16"
windows = { version = "0.62.0", features = ["Win32_UI_WindowsAndMessaging"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.47", features = ["derive"] }
