[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
obfstr = "0.4.4"
filesystem = { path = "../filesystem" }
windows-sys = { workspace = true }
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
regedit = { path = "../regedit" }
spin = "0.10.0"
